Create css files for every page and link them

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>DiscHow</title>
 
+		<link rel="stylesheet" href="/css/pages/front-page.css">
+		<link rel="stylesheet" href="/css/pages/disc-page.css">
+		<link rel="stylesheet" href="/css/pages/discer.css">
+		<link rel="stylesheet" href="/css/pages/nybegynner.css">
+		<link rel="stylesheet" href="/css/pages/kontakt.css">
+
 		<link rel="stylesheet" href="/css/fonts.css">
 		<link rel="stylesheet" href="/css/variables.css">
 		<link rel="stylesheet" href="/css/style.css">
