Update HTML to include a big window-container

--- a/index.html
+++ b/index.html
@@ -20,112 +20,116 @@
 	</head>
 	<body>
 
-		<header>
-			<div class="logo"></div>
-			<span class="header-buttons">
-				<div class="header-button" data-button="discer">Discer</div>
-				<div class="header-button" data-button="nybegynner">Nybegynner discer</div>
-				<div class="header-button" data-button="kontakt-oss">Kontakt oss</div>
-			</span>
-		</header>
+		<div class="window-container">
+			<header>
+				<div class="logo"></div>
+				<span class="header-buttons">
+					<div class="header-button" data-button="discer">Discer</div>
+					<div class="header-button" data-button="nybegynner">Nybegynner discer</div>
+					<div class="header-button" data-button="kontakt-oss">Kontakt oss</div>
+				</span>
+			</header>
 
-		<div class="front-page">
-			<div class="front-page-container">
-				<img class="front-page-image" src="" alt="">
-				<div class="front-page-text">
-					<div class="front-page-title">Velkommen til DiscHow</div>
-					<div class="front-page-description">her kan du lære alt du trenger om diverse discer!</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="discer">
-			<aside class="sidebar">
-				<div class="filter-buttons merke">
-					<label class="merke-checkbox"></label>
-				</div>
-				<div class="filter-buttons type">
-					<label class="type-checkbox"></label>
-
-				</div>
-				<div class="filter-buttons tall">
-					<label class="tall-checkbox"></label>
-
-				</div>
-			</aside>
-
-			<div class="grid-discer">
-				<div class="disc">
-					<a class="disc-img" href="">
-						<img src="" alt="">
-					</a>
-					<div class="disc-info">
-						<div class="disc-navn"></div>
-						<div class="disc-merke"></div>
+			<div class="front-page">
+				<div class="front-page-container">
+					<img class="front-page-image" src="" alt="">
+					<div class="front-page-text">
+						<div class="front-page-title">Velkommen til DiscHow</div>
+						<div class="front-page-description">her kan du lære alt du trenger om diverse discer!</div>
 					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="nybegynner-discer">
-			<div class="ny-discer-text">
-				<div class="ny-discer-title"></div>
-				<div class="ny-discer-description"></div>
-			</div>
+			<div class="discer">
+				<aside class="sidebar">
+					<div class="filter-buttons merke">
+						<label class="merke-checkbox"></label>
+					</div>
+					<div class="filter-buttons type">
+						<label class="type-checkbox"></label>
 
-			<div class="grid-nydiscer">
-				<div class="disc">
-					<a class="disc-img" href=""></a>
-					<div class="disc-info">
-						<div class="disc-navn"></div>
-						<div class="disc-merke"></div>
+					</div>
+					<div class="filter-buttons tall">
+						<label class="tall-checkbox"></label>
+
+					</div>
+				</aside>
+
+				<div class="grid-discer">
+					<div class="disc">
+						<a class="disc-img" href="">
+							<img src="" alt="">
+						</a>
+						<div class="disc-info">
+							<div class="disc-navn"></div>
+							<div class="disc-merke"></div>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="kontakt">
-			<div class="kontakt-text">
-				<div class="kontakt-title"></div>
-				<div class="kontakt-description"></div>
-			</div>
-
-			<div class="kontakt-skjema">
-				<input class="kontakt-skjema_navn" type="text" required placeholder="Ola Nordmann">
-				<input class="kontakt-skjema_telefon" type="number" required placeholder="Telefonnummer" maxlength="8">
-				<input class="kontakt-skjema_mail" type="email" required placeholder="ola.nordmann@hotmail.no">
-				<input class="kontakt-skjema_kommentar" type="text" required placeholder="Kommentar...">
-				<button class="kontakt-skjema_submit">Send inn!</button>
-			</div>
-		</div>
-
-		<div class="disc-page">
-			<span class="disc-page-title">
-				<img class="disc-page-img" src="" alt="">
-				<div class="disc-page-title">
-					<div class="disc-page-title_name"></div>
-					<div class="disc-page-title_brand"></div>
-					<div class="disc-page-title_number"></div>
+			<div class="nybegynner-discer">
+				<div class="ny-discer-text">
+					<div class="ny-discer-title"></div>
+					<div class="ny-discer-description"></div>
 				</div>
-			</span>
-			<div class="disc-page-description_plastic">
-					<div class="disc-page_description">
-						<div class="disc-page-description_title">Informasjon om discen</div>
-						<div class="disc-page-description_description"></div>
-					</div>
 
-					<div class="disc-page_plastic">Plastikk Typer
-						<div class="disc-page_plastic-types"></div>
+				<div class="grid-nydiscer">
+					<div class="disc">
+						<a class="disc-img" href=""></a>
+						<div class="disc-info">
+							<div class="disc-navn"></div>
+							<div class="disc-merke"></div>
+						</div>
 					</div>
+				</div>
 			</div>
-			<div class="disc-page-producer"></div>
+
+			<div class="kontakt">
+				<div class="kontakt-text">
+					<div class="kontakt-title"></div>
+					<div class="kontakt-description"></div>
+				</div>
+
+				<div class="kontakt-skjema">
+					<input class="kontakt-skjema_navn" type="text" required placeholder="Ola Nordmann">
+					<input class="kontakt-skjema_telefon" type="number" required placeholder="Telefonnummer" maxlength="8">
+					<input class="kontakt-skjema_mail" type="email" required placeholder="ola.nordmann@hotmail.no">
+					<input class="kontakt-skjema_kommentar" type="text" required placeholder="Kommentar...">
+					<button class="kontakt-skjema_submit">Send inn!</button>
+				</div>
+			</div>
+
+			<div class="disc-page">
+				<span class="disc-page-title">
+					<img class="disc-page-img" src="" alt="">
+					<div class="disc-page-title">
+						<div class="disc-page-title_name"></div>
+						<div class="disc-page-title_brand"></div>
+						<div class="disc-page-title_number"></div>
+					</div>
+				</span>
+				<div class="disc-page-description_plastic">
+						<div class="disc-page_description">
+							<div class="disc-page-description_title">Informasjon om discen</div>
+							<div class="disc-page-description_description"></div>
+						</div>
+
+						<div class="disc-page_plastic">Plastikk Typer
+							<div class="disc-page_plastic-types"></div>
+						</div>
+				</div>
+				<div class="disc-page-producer"></div>
+			</div>
+			
+			<footer class="footer">
+
+				<div class="footer-websitename"></div>
+				<div class="footer-contact-info"></div>
+
+			</footer>
+
 		</div>
 		
-		<footer class="footer">
-
-			<div class="footer-websitename"></div>
-			<div class="footer-contact-info"></div>
-
-		</footer>
 	</body>
 </html>
