--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 
 		<div class="window-container">
 			<header>
-				<div class="logo"></div>
+				<div class="logo" data-button="home"></div>
 				<span class="header-buttons">
 					<div class="header-button" data-button="discer">Discer</div>
 					<div class="header-button" data-button="nybegynner">Nybegynner discer</div>
-					<div class="header-button" data-button="kontakt-oss">Kontakt oss</div>
+					<div class="header-button" data-button="kontakt">Kontakt oss</div>
 				</span>
 			</header>
 
-			<div class="front-page">
+			<div class="front-page" data-id="home">
 				<div class="front-page-container">
 					<img class="front-page-image" src="" alt="">
 					<div class="front-page-text">
@@ -40,7 +40,7 @@
 				</div>
 			</div>
 
-			<div class="discer">
+			<div class="discer" data-id="discer">
 				<aside class="sidebar">
 					<div class="filter-buttons merke">
 						<label class="merke-checkbox"></label>
@@ -68,7 +68,7 @@
 				</div>
 			</div>
 
-			<div class="nybegynner-discer">
+			<div class="nybegynner-discer" data-id="nybegynner">
 				<div class="ny-discer-text">
 					<div class="ny-discer-title"></div>
 					<div class="ny-discer-description"></div>
@@ -85,7 +85,7 @@
 				</div>
 			</div>
 
-			<div class="kontakt">
+			<div class="kontakt" data-id="kontakt">
 				<div class="kontakt-text">
 					<div class="kontakt-title"></div>
 					<div class="kontakt-description"></div>
@@ -130,6 +130,6 @@
 			</footer>
 
 		</div>
-		
+
 	</body>
 </html>
