Update HTML header

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 
 		<div class="window-container">
 			<header>
-				<div class="logo" data-button="home"></div>
-				<span class="header-buttons">
-					<div class="header-button" data-button="discer">Discer</div>
-					<div class="header-button" data-button="nybegynner">Nybegynner discer</div>
-					<div class="header-button" data-button="kontakt">Kontakt oss</div>
+				<div class="header-logo" data-button="home">
+					<img src="./assets/logo/DiscHowLogoV1.svg" alt="DiscHow Logo">
+				</div>
+				<span class="header-nav">
+					<span class="header-button" data-button="discer">Discer</span>
+					<span class="header-button" data-button="nybegynner">Nybegynner discer</span>
+					<span class="header-button" data-button="kontakt">Kontakt oss</span>
 				</span>
 			</header>
 
