Fix link with js

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 		<link rel="stylesheet" href="./css/style.css">
 		<link rel="stylesheet" href="./css/reset.css">
 
-		<script src="/js/script.js" defer></script>
+		<script src="./js/script.js" defer></script>
 	</head>
 	<body>
 
 		<div class="window-container">
-			
+
 			<header>
 				<div class="header-logo" data-button="home">
 					<img src="./assets/logo/DiscHowLogoV1.svg" alt="DiscHow Logo">
