Add pages class to pages

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
 				</span>
 			</header>
 
-			<div class="front-page" data-id="home">
+
+			
+
+			<div class="front-page pages visible" data-id="home">
 				<div class="front-page-container">
 					<img class="front-page-image" src="" alt="">
 					<div class="front-page-text">
@@ -43,7 +46,7 @@
 				</div>
 			</div>
 
-			<div class="discer" data-id="discer">
+			<div class="discer pages" data-id="discer">
 				<aside class="sidebar">
 					<div class="filter-buttons merke">
 						<label class="merke-checkbox"></label>
@@ -58,7 +61,7 @@
 					</div>
 				</aside>
 
-				<div class="grid-discer">
+				<div class="grid-discer pages">
 					<div class="disc">
 						<a class="disc-img" href="">
 							<img src="" alt="">
@@ -71,7 +74,7 @@
 				</div>
 			</div>
 
-			<div class="nybegynner-discer" data-id="nybegynner">
+			<div class="nybegynner-discer pages" data-id="nybegynner">
 				<div class="ny-discer-text">
 					<div class="ny-discer-title"></div>
 					<div class="ny-discer-description"></div>
@@ -88,7 +91,7 @@
 				</div>
 			</div>
 
-			<div class="kontakt" data-id="kontakt">
+			<div class="kontakt pages" data-id="kontakt">
 				<div class="kontakt-text">
 					<div class="kontakt-title"></div>
 					<div class="kontakt-description"></div>
