Made nav buttons functional

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="window-container">
 
 			<header>
-				<div class="header-logo" data-button="home">
+				<div class="header-button header-logo" data-button="home">
 					<img src="./assets/logo/DiscHowLogoV1.svg" alt="DiscHow Logo">
 				</div>
 				<span class="header-nav">
@@ -34,9 +34,9 @@
 			</header>
 
 
-			
 
-			<div class="front-page pages visible" data-id="home">
+
+			<div class="front-page pages visible" data-page="home">
 				<div class="front-page-container">
 					<img class="front-page-image" src="" alt="">
 					<div class="front-page-text">
@@ -46,7 +46,7 @@
 				</div>
 			</div>
 
-			<div class="discer pages" data-id="discer">
+			<div class="discer pages" data-page="discer">
 				<aside class="sidebar">
 					<div class="filter-buttons merke">
 						<label class="merke-checkbox"></label>
@@ -74,7 +74,7 @@
 				</div>
 			</div>
 
-			<div class="nybegynner-discer pages" data-id="nybegynner">
+			<div class="nybegynner-discer pages" data-page="nybegynner">
 				<div class="ny-discer-text">
 					<div class="ny-discer-title"></div>
 					<div class="ny-discer-description"></div>
@@ -91,7 +91,7 @@
 				</div>
 			</div>
 
-			<div class="kontakt pages" data-id="kontakt">
+			<div class="kontakt pages" data-page="kontakt">
 				<div class="kontakt-text">
 					<div class="kontakt-title"></div>
 					<div class="kontakt-description"></div>
