Change header-button to nav-button

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 					<img src="./assets/logo/DiscHowLogoV1.svg" alt="DiscHow Logo">
 				</div>
 				<span class="header-nav">
-					<span class="header-button" data-button="discer">Discer</span>
-					<span class="header-button" data-button="nybegynner">Nybegynner discer</span>
-					<span class="header-button" data-button="kontakt">Kontakt oss</span>
+					<span class="nav-button" data-button="discer">Discer</span>
+					<span class="nav-button" data-button="nybegynner">Nybegynner discer</span>
+					<span class="nav-button" data-button="kontakt">Kontakt oss</span>
 				</span>
 
 			</header>
@@ -154,6 +154,86 @@
 							<div class="disc-merke"></div>
 						</div>
 					</div>
+
+					<div class="disc">
+						<a class="disc-img" href="">
+							<img src="" alt="">
+						</a>
+						<div class="disc-info">
+							<div class="disc-navn"></div>
+							<div class="disc-merke"></div>
+						</div>
+					</div>
+
+					<div class="disc">
+						<a class="disc-img" href="">
+							<img src="" alt="">
+						</a>
+						<div class="disc-info">
+							<div class="disc-navn"></div>
+							<div class="disc-merke"></div>
+						</div>
+					</div>
+
+					<div class="disc">
+						<a class="disc-img" href="">
+							<img src="" alt="">
+						</a>
+						<div class="disc-info">
+							<div class="disc-navn"></div>
+							<div class="disc-merke"></div>
+						</div>
+					</div>
+
+					<div class="disc">
+						<a class="disc-img" href="">
+							<img src="" alt="">
+						</a>
+						<div class="disc-info">
+							<div class="disc-navn"></div>
+							<div class="disc-merke"></div>
+						</div>
+					</div>
+
+					<div class="disc">
+						<a class="disc-img" href="">
+							<img src="" alt="">
+						</a>
+						<div class="disc-info">
+							<div class="disc-navn"></div>
+							<div class="disc-merke"></div>
+						</div>
+					</div>
+
+					<div class="disc">
+						<a class="disc-img" href="">
+							<img src="" alt="">
+						</a>
+						<div class="disc-info">
+							<div class="disc-navn"></div>
+							<div class="disc-merke"></div>
+						</div>
+					</div>
+
+					<div class="disc">
+						<a class="disc-img" href="">
+							<img src="" alt="">
+						</a>
+						<div class="disc-info">
+							<div class="disc-navn"></div>
+							<div class="disc-merke"></div>
+						</div>
+					</div>
+
+					<div class="disc">
+						<a class="disc-img" href="">
+							<img src="" alt="">
+						</a>
+						<div class="disc-info">
+							<div class="disc-navn"></div>
+							<div class="disc-merke"></div>
+						</div>
+					</div>
 				</div>
 			</div>
 
@@ -217,14 +297,18 @@
 				<div class="disc-page-producer"></div>
 			</div>
 			
-			<footer class="footer">
-
-				<div class="footer-websitename"></div>
-				<div class="footer-contact-info"></div>
-
-			</footer>
 
 		</div>
-
+		<div class="footer">
+			
+			<div class="footer-contact-info">
+				<div class="footer-nav">
+					<button data-button="discer">DISCER</button>
+					<button data-button="kontakt">KONTAKT</button>
+				</div>
+			</div>
+			<img class="footer-websitename" src="./assets/logo/discHow-footer.svg" alt="DiscHow text">
+	
+		</div>
 	</body>
 </html>
