--- a/index.html
+++ b/index.html
@@ -299,15 +299,23 @@
 			
 
 		</div>
-		<div class="footer">
+		<div class="footer-container">
 			
-			<div class="footer-contact-info">
-				<div class="footer-nav">
-					<button data-button="discer">DISCER</button>
-					<button data-button="kontakt">KONTAKT</button>
-				</div>
+			<div class="footer-content">
+				<span class="footer-content_text">
+					<span class="footer-nav">
+						<button class="nav-button" data-button="discer">DISCER</button>
+						<button class="nav-button" data-button="kontakt">KONTAKT</button>
+					</span>
+
+					<span class="footer-contact-info">
+						<div>epost@epsot.no</div>
+						<div>+47 123 45 678</div>
+						<div>Adresse 1, 0670</div>
+					</span>
+				</span>
+				<img class="footer-websitename" src="./assets/logo/discHow-footer.svg" alt="DiscHow text">
 			</div>
-			<img class="footer-websitename" src="./assets/logo/discHow-footer.svg" alt="DiscHow text">
 	
 		</div>
 	</body>
