--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				</div>
 			</div>
 
-			<div class="discer pages visible" data-page="discer">
+			<div class="discer pages " data-page="discer">
 				<aside class="sidebar">
 					<div class="filter-buttons">
 						<div class="filter-buttons-title merke-title">Merke</div>
@@ -237,13 +237,41 @@
 				</div>
 			</div>
 
-			<div class="nybegynner-discer pages" data-page="nybegynner">
+			<div class="nybegynner-discer pages visible" data-page="nybegynner">
 				<div class="ny-discer-text">
-					<div class="ny-discer-title"></div>
-					<div class="ny-discer-description"></div>
+					<div class="ny-discer-title">Ny i Discgolf? </div>
+					<div class="ny-discer-description">
+						<div>Å begynne med disc golf kan være forvirrende, mange discer i ulike former og farger overalt.
+							Vanskelig å vite hva man burde starte med.</div>
+						<div>Her er ett utvalg med enkle discer som kan gjøre starten litt enklere! </div>
+					</div>
 				</div>
 
 				<div class="grid-nydiscer">
+					<div class="disc">
+						<a class="disc-img" href=""></a>
+						<div class="disc-info">
+							<div class="disc-navn"></div>
+							<div class="disc-merke"></div>
+						</div>
+					</div>
+
+					<div class="disc">
+						<a class="disc-img" href=""></a>
+						<div class="disc-info">
+							<div class="disc-navn"></div>
+							<div class="disc-merke"></div>
+						</div>
+					</div>
+
+					<div class="disc">
+						<a class="disc-img" href=""></a>
+						<div class="disc-info">
+							<div class="disc-navn"></div>
+							<div class="disc-merke"></div>
+						</div>
+					</div>
+
 					<div class="disc">
 						<a class="disc-img" href=""></a>
 						<div class="disc-info">
