--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				</div>
 			</div>
 
-			<div class="discer pages " data-page="discer">
+			<div class="discer pages visible" data-page="discer">
 				<aside class="sidebar">
 					<div class="filter-buttons">
 						<div class="filter-buttons-title merke-title">Merke</div>
@@ -144,100 +144,187 @@
 					</div>
 				</aside>
 
-				<div class="grid-discer pages">
+				<div class="grid-discer pages ">
 					<div class="disc">
 						<a class="disc-img" href="">
-							<img src="" alt="">
+							<img src="./assets/Disc-img/disc-img_anax.jpeg" alt="Image of the disc Anax">
 						</a>
 						<div class="disc-info">
-							<div class="disc-navn"></div>
-							<div class="disc-merke"></div>
+							<div class="disc-tall">10 6 0 3</div>
+							<div class="disc-navn">ESP Anax</div>
+							<div class="disc-merke">Discraft</div>
 						</div>
 					</div>
 
 					<div class="disc">
 						<a class="disc-img" href="">
-							<img src="" alt="">
+							<img src="./assets/Disc-img/disc-img_hex.png" alt="Image of the disc Hex">
 						</a>
 						<div class="disc-info">
-							<div class="disc-navn"></div>
-							<div class="disc-merke"></div>
+							<div class="disc-tall">5 5 -1 1</div>
+							<div class="disc-navn">Hex</div>
+							<div class="disc-merke">MVP</div>
 						</div>
 					</div>
 
 					<div class="disc">
 						<a class="disc-img" href="">
-							<img src="" alt="">
+							<img src="./assets/Disc-img/disc-img_wraith.jpg" alt="Image of the disc Wraith">
 						</a>
 						<div class="disc-info">
-							<div class="disc-navn"></div>
-							<div class="disc-merke"></div>
+							<div class="disc-tall">11 5 -1 3</div>
+							<div class="disc-navn">Wraith</div>
+							<div class="disc-merke">Innova</div>
 						</div>
 					</div>
 
 					<div class="disc">
 						<a class="disc-img" href="">
-							<img src="" alt="">
+							<img src="./assets/Disc-img/disc-img_berg.jpg" alt="Image of the disc Berg">
 						</a>
 						<div class="disc-info">
-							<div class="disc-navn"></div>
-							<div class="disc-merke"></div>
+							<div class="disc-tall">1 1 0 2</div>
+							<div class="disc-navn">Berg</div>
+							<div class="disc-merke">Kastaplast</div>
 						</div>
 					</div>
 
 					<div class="disc">
 						<a class="disc-img" href="">
-							<img src="" alt="">
+							<img src="./assets/Disc-img/disc-img_destroyer.jpeg" alt="Image of the disc Destroyer">
 						</a>
 						<div class="disc-info">
-							<div class="disc-navn"></div>
-							<div class="disc-merke"></div>
+							<div class="disc-tall">12 5 -1 3</div>
+							<div class="disc-navn">Destroyer</div>
+							<div class="disc-merke">Innova</div>
 						</div>
 					</div>
 
 					<div class="disc">
 						<a class="disc-img" href="">
-							<img src="" alt="">
+							<img src="./assets/Disc-img/disc-img_envy.jpeg" alt="Image of the disc Envy">
 						</a>
 						<div class="disc-info">
-							<div class="disc-navn"></div>
-							<div class="disc-merke"></div>
+							<div class="disc-tall">3 3 0 2</div>
+							<div class="disc-navn">Envy</div>
+							<div class="disc-merke">MVP</div>
 						</div>
 					</div>
 
 					<div class="disc">
 						<a class="disc-img" href="">
-							<img src="" alt="">
+							<img src="./assets/Disc-img/disc-img_falk.png" alt="Image of the disc Falk">
 						</a>
 						<div class="disc-info">
-							<div class="disc-navn"></div>
-							<div class="disc-merke"></div>
+							<div class="disc-tall">9 6 -2 1</div>
+							<div class="disc-navn">Falk</div>
+							<div class="disc-merke">Kastaplast</div>
 						</div>
 					</div>
 
 					<div class="disc">
 						<a class="disc-img" href="">
-							<img src="" alt="">
+							<img src="./assets/Disc-img/disc-img_fd.jpeg" alt="Image of the disc FD">
 						</a>
 						<div class="disc-info">
-							<div class="disc-navn"></div>
-							<div class="disc-merke"></div>
+							<div class="disc-tall">7 6 0 1</div>
+							<div class="disc-navn">FD</div>
+							<div class="disc-merke">Discmania</div>
 						</div>
 					</div>
 
 					<div class="disc">
 						<a class="disc-img" href="">
-							<img src="" alt="">
+							<img src="./assets/Disc-img/disc-img_glitch.jpeg" alt="Image of the disc Glitch">
 						</a>
 						<div class="disc-info">
-							<div class="disc-navn"></div>
-							<div class="disc-merke"></div>
+							<div class="disc-tall">1 7 0 0</div>
+							<div class="disc-navn">Glitch</div>
+							<div class="disc-merke">MVP</div>
 						</div>
 					</div>
+
+					<div class="disc">
+						<a class="disc-img" href="">
+							<img src="./assets/Disc-img/disc-img_kaxe.jpeg" alt="Image of the disc Kaxe">
+						</a>
+						<div class="disc-info">
+							<div class="disc-tall">6 4 0 3</div>
+							<div class="disc-navn">Kaxe</div>
+							<div class="disc-merke">Kastaplast</div>
+						</div>
+					</div>
+
+					<div class="disc">
+						<a class="disc-img" href="">
+							<img src="./assets/Disc-img/disc-img_leopard.jpeg" alt="Image of the disc Leopard">
+						</a>
+						<div class="disc-info">
+							<div class="disc-tall">6 5 -2 1</div>
+							<div class="disc-navn">Leopard</div>
+							<div class="disc-merke">Innova</div>
+						</div>
+					</div>
+
+					<div class="disc">
+						<a class="disc-img" href="">
+							<img src="./assets/Disc-img/disc-img_link.jpeg" alt="Image of the disc Link">
+						</a>
+						<div class="disc-info">
+							<div class="disc-tall">2 3 0 1</div>
+							<div class="disc-navn">Link</div>
+							<div class="disc-merke">Discmania</div>
+						</div>
+					</div>
+
+					<div class="disc">
+						<a class="disc-img" href="">
+							<img src="./assets/Disc-img/disc-img_penrose.jpeg" alt="Image of the disc Penrose">
+						</a>
+						<div class="disc-info">
+							<div class="disc-tall">2 4 0 2</div>
+							<div class="disc-navn">Penrose</div>
+							<div class="disc-merke">EV-7</div>
+						</div>
+					</div>
+
+					<div class="disc">
+						<a class="disc-img" href="">
+							<img src="./assets/Disc-img/disc-img_roc.jpeg" alt="Image of the disc Roc">
+						</a>
+						<div class="disc-info">
+							<div class="disc-tall">4 4 0 3</div>
+							<div class="disc-navn">Roc</div>
+							<div class="disc-merke">Innova</div>
+						</div>
+					</div>
+
+					<div class="disc">
+						<a class="disc-img" href="">
+							<img src="./assets/Disc-img/disc-img_teebird.jpeg" alt="Image of the disc Teebird">
+						</a>
+						<div class="disc-info">
+							<div class="disc-tall">7 5 0 2</div>
+							<div class="disc-navn">Teebird</div>
+							<div class="disc-merke">Innova</div>
+						</div>
+					</div>
+
+					<div class="disc">
+						<a class="disc-img" href="">
+							<img src="./assets/Disc-img/disc-img_zone.jpeg" alt="Image of the disc Zone">
+						</a>
+						<div class="disc-info">
+							<div class="disc-tall">4 3 0 3</div>
+							<div class="disc-navn">Zone</div>
+							<div class="disc-merke">Discraft</div>
+						</div>
+					</div>
+					
 				</div>
 			</div>
 
-			<div class="nybegynner-discer pages visible" data-page="nybegynner">
+			<div class="nybegynner-discer pages" data-page="nybegynner">
 				<div class="ny-discer-text">
 					<div class="ny-discer-title">Ny i Discgolf? </div>
 					<div class="ny-discer-description">
@@ -249,7 +336,9 @@
 
 				<div class="grid-nydiscer">
 					<div class="disc">
-						<a class="disc-img" href=""></a>
+						<a class="disc-img" href="">
+							<img src="" alt="">
+						</a>
 						<div class="disc-info">
 							<div class="disc-navn"></div>
 							<div class="disc-merke"></div>
