--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
 						<div class="filter-buttons-title merke-title">Merke</div>
 
 						<label class="merke-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input checkbox" hidden type="checkbox" name="mvp" value="mvp">
+							<input class="filter-checkbox_input checkbox" hidden type="checkbox" data-filter-value="mvp" data-filter-by="brand">
 							<span class="filter-checkbox_text">MVP</span>
 						</label>
 
 						<label class="merke-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input" hidden type="checkbox" name="discraft" value="discraft">
+							<input class="filter-checkbox_input" hidden type="checkbox" data-filter-value="discraft" data-filter-by="brand">
 							<span class="filter-checkbox_text">Discraft</span>
 						</label>
 
 						<label class="merke-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input" hidden type="checkbox" name="discmania" value="discmania">
+							<input class="filter-checkbox_input" hidden type="checkbox" data-filter-value="discmania" data-filter-by="brand">
 							<span class="filter-checkbox_text">Discmania</span>
 						</label>
 
 						<label class="merke-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input" hidden type="checkbox" name="kastaplast" value="kastaplast">
+							<input class="filter-checkbox_input" hidden type="checkbox" data-filter-value="kastaplast" data-filter-by="brand">
 							<span class="filter-checkbox_text">Kastaplast</span>
 						</label>
 
@@ -78,22 +78,22 @@
 						<div class="filter-buttons-title type-title">Type</div>
 
 						<label class="type-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input" hidden type="checkbox" name="putter" value="putter">
+							<input class="filter-checkbox_input" hidden type="checkbox" data-filter-value="putter" data-filter-by="disc-type">
 							<span class="filter-checkbox_text">Putter</span>
 						</label>
 
 						<label class="type-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input" hidden type="checkbox" name="midrange" value="midrange">
+							<input class="filter-checkbox_input" hidden type="checkbox" data-filter-value="midrange" data-filter-by="disc-type">
 							<span class="filter-checkbox_text">Midrange</span>
 						</label>
 
 						<label class="type-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input" hidden type="checkbox" name="fairway" value="fairway">
+							<input class="filter-checkbox_input" hidden type="checkbox" data-filter-value="fairway" data-filter-by="disc-type">
 							<span class="filter-checkbox_text">Fairway Driver</span>
 						</label>
 
 						<label class="type-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input" hidden type="checkbox" name="distance" value="distance">
+							<input class="filter-checkbox_input" hidden type="checkbox" data-filter-value="distance" data-filter-by="disc-type">
 							<span class="filter-checkbox_text">Distance Driver</span>
 						</label>
 
@@ -145,181 +145,6 @@
 				</aside>
 
 				<div class="grid-discer pages ">
-					<div class="disc">
-						<a class="disc-img" href="">
-							<img src="./assets/Disc-img/disc-img_anax.jpeg" alt="Image of the disc Anax">
-						</a>
-						<div class="disc-info">
-							<div class="disc-tall">10 6 0 3</div>
-							<div class="disc-navn">ESP Anax</div>
-							<div class="disc-merke">Discraft</div>
-						</div>
-					</div>
-
-					<div class="disc">
-						<a class="disc-img" href="">
-							<img src="./assets/Disc-img/disc-img_hex.png" alt="Image of the disc Hex">
-						</a>
-						<div class="disc-info">
-							<div class="disc-tall">5 5 -1 1</div>
-							<div class="disc-navn">Hex</div>
-							<div class="disc-merke">MVP</div>
-						</div>
-					</div>
-
-					<div class="disc">
-						<a class="disc-img" href="">
-							<img src="./assets/Disc-img/disc-img_wraith.jpg" alt="Image of the disc Wraith">
-						</a>
-						<div class="disc-info">
-							<div class="disc-tall">11 5 -1 3</div>
-							<div class="disc-navn">Wraith</div>
-							<div class="disc-merke">Innova</div>
-						</div>
-					</div>
-
-					<div class="disc">
-						<a class="disc-img" href="">
-							<img src="./assets/Disc-img/disc-img_berg.jpg" alt="Image of the disc Berg">
-						</a>
-						<div class="disc-info">
-							<div class="disc-tall">1 1 0 2</div>
-							<div class="disc-navn">Berg</div>
-							<div class="disc-merke">Kastaplast</div>
-						</div>
-					</div>
-
-					<div class="disc">
-						<a class="disc-img" href="">
-							<img src="./assets/Disc-img/disc-img_destroyer.jpeg" alt="Image of the disc Destroyer">
-						</a>
-						<div class="disc-info">
-							<div class="disc-tall">12 5 -1 3</div>
-							<div class="disc-navn">Destroyer</div>
-							<div class="disc-merke">Innova</div>
-						</div>
-					</div>
-
-					<div class="disc">
-						<a class="disc-img" href="">
-							<img src="./assets/Disc-img/disc-img_envy.jpeg" alt="Image of the disc Envy">
-						</a>
-						<div class="disc-info">
-							<div class="disc-tall">3 3 0 2</div>
-							<div class="disc-navn">Envy</div>
-							<div class="disc-merke">MVP</div>
-						</div>
-					</div>
-
-					<div class="disc">
-						<a class="disc-img" href="">
-							<img src="./assets/Disc-img/disc-img_falk.png" alt="Image of the disc Falk">
-						</a>
-						<div class="disc-info">
-							<div class="disc-tall">9 6 -2 1</div>
-							<div class="disc-navn">Falk</div>
-							<div class="disc-merke">Kastaplast</div>
-						</div>
-					</div>
-
-					<div class="disc">
-						<a class="disc-img" href="">
-							<img src="./assets/Disc-img/disc-img_fd.jpeg" alt="Image of the disc FD">
-						</a>
-						<div class="disc-info">
-							<div class="disc-tall">7 6 0 1</div>
-							<div class="disc-navn">FD</div>
-							<div class="disc-merke">Discmania</div>
-						</div>
-					</div>
-
-					<div class="disc">
-						<a class="disc-img" href="">
-							<img src="./assets/Disc-img/disc-img_glitch.jpeg" alt="Image of the disc Glitch">
-						</a>
-						<div class="disc-info">
-							<div class="disc-tall">1 7 0 0</div>
-							<div class="disc-navn">Glitch</div>
-							<div class="disc-merke">MVP</div>
-						</div>
-					</div>
-
-					<div class="disc">
-						<a class="disc-img" href="">
-							<img src="./assets/Disc-img/disc-img_kaxe.jpeg" alt="Image of the disc Kaxe">
-						</a>
-						<div class="disc-info">
-							<div class="disc-tall">6 4 0 3</div>
-							<div class="disc-navn">Kaxe</div>
-							<div class="disc-merke">Kastaplast</div>
-						</div>
-					</div>
-
-					<div class="disc">
-						<a class="disc-img" href="">
-							<img src="./assets/Disc-img/disc-img_leopard.jpeg" alt="Image of the disc Leopard">
-						</a>
-						<div class="disc-info">
-							<div class="disc-tall">6 5 -2 1</div>
-							<div class="disc-navn">Leopard</div>
-							<div class="disc-merke">Innova</div>
-						</div>
-					</div>
-
-					<div class="disc">
-						<a class="disc-img" href="">
-							<img src="./assets/Disc-img/disc-img_link.jpeg" alt="Image of the disc Link">
-						</a>
-						<div class="disc-info">
-							<div class="disc-tall">2 3 0 1</div>
-							<div class="disc-navn">Link</div>
-							<div class="disc-merke">Discmania</div>
-						</div>
-					</div>
-
-					<div class="disc">
-						<a class="disc-img" href="">
-							<img src="./assets/Disc-img/disc-img_penrose.jpeg" alt="Image of the disc Penrose">
-						</a>
-						<div class="disc-info">
-							<div class="disc-tall">2 4 0 2</div>
-							<div class="disc-navn">Penrose</div>
-							<div class="disc-merke">EV-7</div>
-						</div>
-					</div>
-
-					<div class="disc">
-						<a class="disc-img" href="">
-							<img src="./assets/Disc-img/disc-img_roc.jpeg" alt="Image of the disc Roc">
-						</a>
-						<div class="disc-info">
-							<div class="disc-tall">4 4 0 3</div>
-							<div class="disc-navn">Roc</div>
-							<div class="disc-merke">Innova</div>
-						</div>
-					</div>
-
-					<div class="disc">
-						<a class="disc-img" href="">
-							<img src="./assets/Disc-img/disc-img_teebird.jpeg" alt="Image of the disc Teebird">
-						</a>
-						<div class="disc-info">
-							<div class="disc-tall">7 5 0 2</div>
-							<div class="disc-navn">Teebird</div>
-							<div class="disc-merke">Innova</div>
-						</div>
-					</div>
-
-					<div class="disc">
-						<a class="disc-img" href="">
-							<img src="./assets/Disc-img/disc-img_zone.jpeg" alt="Image of the disc Zone">
-						</a>
-						<div class="disc-info">
-							<div class="disc-tall">4 3 0 3</div>
-							<div class="disc-navn">Zone</div>
-							<div class="disc-merke">Discraft</div>
-						</div>
-					</div>
 					
 				</div>
 			</div>
