Moved discs into its own file and exported it

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		<link rel="stylesheet" href="./css/style.css">
 		<link rel="stylesheet" href="./css/reset.css">
 
-		<script src="./js/script.js" defer></script>
+		<script type="module" src="./js/script.js" defer></script>
+		<script type="module" src="./js/discs.js" defer></script>
 	</head>
 	<body>
 
@@ -54,22 +55,22 @@
 						<div class="filter-buttons-title merke-title">Merke</div>
 
 						<label class="merke-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input checkbox" hidden type="checkbox" data-filter-value="mvp" data-filter-by="brand">
+							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="mvp" data-filter-by="brand">
 							<span class="filter-checkbox_text">MVP</span>
 						</label>
 
 						<label class="merke-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input" hidden type="checkbox" data-filter-value="discraft" data-filter-by="brand">
+							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="discraft" data-filter-by="brand">
 							<span class="filter-checkbox_text">Discraft</span>
 						</label>
 
 						<label class="merke-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input" hidden type="checkbox" data-filter-value="discmania" data-filter-by="brand">
+							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="discmania" data-filter-by="brand">
 							<span class="filter-checkbox_text">Discmania</span>
 						</label>
 
 						<label class="merke-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input" hidden type="checkbox" data-filter-value="kastaplast" data-filter-by="brand">
+							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="kastaplast" data-filter-by="brand">
 							<span class="filter-checkbox_text">Kastaplast</span>
 						</label>
 
@@ -78,22 +79,22 @@
 						<div class="filter-buttons-title type-title">Type</div>
 
 						<label class="type-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input" hidden type="checkbox" data-filter-value="putter" data-filter-by="disc-type">
+							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="putter" data-filter-by="disc-type">
 							<span class="filter-checkbox_text">Putter</span>
 						</label>
 
 						<label class="type-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input" hidden type="checkbox" data-filter-value="midrange" data-filter-by="disc-type">
+							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="midrange" data-filter-by="disc-type">
 							<span class="filter-checkbox_text">Midrange</span>
 						</label>
 
 						<label class="type-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input" hidden type="checkbox" data-filter-value="fairway" data-filter-by="disc-type">
+							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="fairway" data-filter-by="disc-type">
 							<span class="filter-checkbox_text">Fairway Driver</span>
 						</label>
 
 						<label class="type-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input" hidden type="checkbox" data-filter-value="distance" data-filter-by="disc-type">
+							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="distance" data-filter-by="disc-type">
 							<span class="filter-checkbox_text">Distance Driver</span>
 						</label>
 
