Fixed logo so its clickable

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 			<header>
 
-				<div class="header-button header-logo" data-button="home">
+				<div class="nav-button header-logo" data-button="home">
 					<img src="./assets/logo/DiscHowLogoV1.svg" alt="DiscHow Logo">
 				</div>
 				<span class="header-nav">
