Add function that stores the contact info of user

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					</div>
 				</div>
 
-				<form class="kontakt-skjema">
+				<form class="kontakt-skjema" onsubmit="return false">
 					<div class="grid-skjema">
 							<input class="kontakt-skjema_felt kontakt-skjema_navn" type="text" required placeholder="Ola Nordmann">
 							<input class="kontakt-skjema_felt kontakt-skjema_telefon" type="number" required placeholder="Telefonnummer" maxlength="8">
