Add img on homepage

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 			<div class="front-page pages visible" data-page="home">
 				<div class="front-page-container">
-					<img class="front-page-image" src="" alt="">
+					<img class="front-page-image" src="/assets/landing-page_img/people-playing-disc-golf2.jpeg" alt="">
 					<div class="front-page-text">
 						<div class="front-page-title">Velkommen til DiscHow</div>
 						<div class="front-page-description">her kan du lære alt du trenger om diverse discer!</div>
