Designed the popup

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
 
-			<div class="front-page pages visible" data-page="home">
+			<div class="front-page pages " data-page="home">
 				<div class="front-page-container">
 					<img class="front-page-image" src="/assets/landing-page_img/people-playing-disc-golf2.jpeg" alt="">
 					<div class="front-page-text">
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 
-			<div class="discer pages" data-page="discer">
+			<div class="discer pages visible" data-page="discer">
 				<aside class="sidebar">
 					<div class="filter-buttons">
 						<div class="filter-buttons-title merke-title">Merke</div>
@@ -103,8 +103,26 @@
 				</aside>
 
 				<div class="grid-discer pages ">
-					
 				</div>
+
+				<div class="disc-popup">
+					<span class="disc-popup-title">
+						<img class="disc-popup-img" src="./assets/Disc-img/disc-img_anax.jpeg" alt="">
+						<div class="disc-popup-title-text">
+							<div class="disc-popup-title_name">Anax</div>
+							<div class="disc-popup-title_number">19 5 -9 9</div>
+							<div class="disc-popup-title_brand">Discraft</div>
+						</div>
+					</span>
+					<div class="disc-popup-description">
+							<div class="disc-popup_description">
+								<div class="disc-popup-description_title">Informasjon om discen</div>
+								<div class="disc-popup-description_description">Introducing the 3rd disc in Paul McBeth's lineup - The Anax (pronounced 'aa·nuhks'). A strong, overstable fairway driver with the sharp rim of a distance driver but the comfort, thinner rim, and precision of a fairway driver.</div>
+							</div>
+					</div>
+					<div class="disc-popup-producer"></div>
+				</div>
+
 			</div>
 
 			<div class="nybegynner-discer pages" data-page="nybegynner">
@@ -142,30 +160,7 @@
 					<button class="kontakt-skjema_submit">Send inn!</button>
 				</form>
 			</div>
-
-			<div class="disc-page">
-				<span class="disc-page-title">
-					<img class="disc-page-img" src="" alt="">
-					<div class="disc-page-title">
-						<div class="disc-page-title_name"></div>
-						<div class="disc-page-title_brand"></div>
-						<div class="disc-page-title_number"></div>
-					</div>
-				</span>
-				<div class="disc-page-description_plastic">
-						<div class="disc-page_description">
-							<div class="disc-page-description_title">Informasjon om discen</div>
-							<div class="disc-page-description_description"></div>
-						</div>
-
-						<div class="disc-page_plastic">Plastikk Typer
-							<div class="disc-page_plastic-types"></div>
-						</div>
-				</div>
-				<div class="disc-page-producer"></div>
-			</div>
 			
-
 		</div>
 		<div class="footer-container">
 			
