Add fade-in animation to popup container

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
 
-			<div class="front-page pages " data-page="home">
+			<div class="front-page pages visible" data-page="home">
 				<div class="front-page-container">
 					<img class="front-page-image" src="/assets/landing-page_img/people-playing-disc-golf2.jpeg" alt="">
 					<div class="front-page-text">
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 
-			<div class="discer pages visible" data-page="discer">
+			<div class="discer pages" data-page="discer">
 				<aside class="sidebar">
 					<div class="filter-buttons">
 						<div class="filter-buttons-title merke-title">Merke</div>
