--- a/index.html
+++ b/index.html
@@ -52,6 +52,31 @@
 			<div class="discer pages" data-page="discer">
 				<aside class="sidebar">
 					<div class="filter-buttons">
+						<div class="filter-buttons-title type-title">Type</div>
+
+						<label class="type-checkbox_label checkbox-label">
+							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="putter" data-filter-by="discType">
+							<span class="filter-checkbox_text">Putter</span>
+						</label>
+
+						<label class="type-checkbox_label checkbox-label">
+							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="midrange" data-filter-by="discType">
+							<span class="filter-checkbox_text">Midrange</span>
+						</label>
+
+						<label class="type-checkbox_label checkbox-label">
+							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="fairway" data-filter-by="discType">
+							<span class="filter-checkbox_text">Fairway Driver</span>
+						</label>
+
+						<label class="type-checkbox_label checkbox-label">
+							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="distance" data-filter-by="discType">
+							<span class="filter-checkbox_text">Distance Driver</span>
+						</label>
+
+					</div>
+
+					<div class="filter-buttons">
 						<div class="filter-buttons-title merke-title">Merke</div>
 
 						<label class="merke-checkbox_label checkbox-label">
@@ -74,28 +99,14 @@
 							<span class="filter-checkbox_text">Kastaplast</span>
 						</label>
 
-					</div>
-					<div class="filter-buttons">
-						<div class="filter-buttons-title type-title">Type</div>
-
-						<label class="type-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="putter" data-filter-by="discType">
-							<span class="filter-checkbox_text">Putter</span>
+						<label class="merke-checkbox_label checkbox-label">
+							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="innova" data-filter-by="brand">
+							<span class="filter-checkbox_text">Innova</span>
 						</label>
 
-						<label class="type-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="midrange" data-filter-by="discType">
-							<span class="filter-checkbox_text">Midrange</span>
-						</label>
-
-						<label class="type-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="fairway" data-filter-by="discType">
-							<span class="filter-checkbox_text">Fairway Driver</span>
-						</label>
-
-						<label class="type-checkbox_label checkbox-label">
-							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="distance" data-filter-by="discType">
-							<span class="filter-checkbox_text">Distance Driver</span>
+						<label class="merke-checkbox_label checkbox-label">
+							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="ev-7" data-filter-by="brand">
+							<span class="filter-checkbox_text">EV-7</span>
 						</label>
 
 					</div>
