Fixed header and footer so they are responsive

--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
 			<div class="footer-content">
 				<span class="footer-content_text">
 					<span class="footer-nav">
-						<button class="nav-button" data-button="discer">DISCER</button>
-						<button class="nav-button" data-button="kontakt">KONTAKT</button>
+						<button class="nav-button nav-footer" data-button="discer">DISCER</button>
+						<button class="nav-button nav-footer" data-button="kontakt">KONTAKT</button>
 					</span>
 
 					<span class="footer-contact-info">
