made discer page responsive

--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
 					</div>
 				</div>
 			</div>
-
+			
 			<div class="discer pages" data-page="discer">
+
+
+
 				<aside class="sidebar">
 					<div class="filter-buttons">
 						<div class="filter-buttons-title type-title">Type</div>
@@ -112,8 +115,10 @@
 					</div>
 					
 				</aside>
+			
 
 				<div class="grid-discer pages ">
+					<button class="mobile-filter-button">Filter</button>
 				</div>
 
 			</div>
