Fixed the js part of mobile sidebar functionality

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 
 
 				<aside class="sidebar">
+
+					<button class="sidebar-close">Close</button>
+
 					<div class="filter-buttons">
 						<div class="filter-buttons-title type-title">Type</div>
 
