Sorted Js queryselectors

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 				<aside class="sidebar">
 
-					<button class="sidebar-close">Close</button>
+					<button class="sidebar-mobile-close">Close</button>
 
 					<div class="filter-buttons">
 						<div class="filter-buttons-title type-title">Type</div>
