Add tiny logo to browsertab

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>DiscHow</title>
 
+		<link rel="icon" href="./assets/logo/DiscHowLogo-32px.svg">
+
 		<link rel="stylesheet" href="./css/pages/front-page.css">
 		<link rel="stylesheet" href="./css/pages/disc-page.css">
 		<link rel="stylesheet" href="./css/pages/discer.css">
