Made every class in english

--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
 					<div class="filter-buttons">
 						<div class="filter-buttons-title type-title">Type</div>
 
-						<label class="type-checkbox_label checkbox-label">
+						<label class="type__checkbox-label checkbox-label">
 							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="putter" data-filter-by="discType">
 							<span class="filter-checkbox_text">Putter</span>
 						</label>
 
-						<label class="type-checkbox_label checkbox-label">
+						<label class="type__checkbox-label checkbox-label">
 							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="midrange" data-filter-by="discType">
 							<span class="filter-checkbox_text">Midrange</span>
 						</label>
 
-						<label class="type-checkbox_label checkbox-label">
+						<label class="type__checkbox-label checkbox-label">
 							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="fairway" data-filter-by="discType">
 							<span class="filter-checkbox_text">Fairway Driver</span>
 						</label>
 
-						<label class="type-checkbox_label checkbox-label">
+						<label class="type__checkbox-label checkbox-label">
 							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="distance" data-filter-by="discType">
 							<span class="filter-checkbox_text">Distance Driver</span>
 						</label>
@@ -85,34 +85,34 @@
 					</div>
 
 					<div class="filter-buttons">
-						<div class="filter-buttons-title merke-title">Merke</div>
+						<div class="filter-buttons-title brand-title">Merke</div>
 
-						<label class="merke-checkbox_label checkbox-label">
+						<label class="brand__checkbox-label checkbox-label">
 							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="mvp" data-filter-by="brand">
 							<span class="filter-checkbox_text">MVP</span>
 						</label>
 
-						<label class="merke-checkbox_label checkbox-label">
+						<label class="brand__checkbox-label checkbox-label">
 							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="discraft" data-filter-by="brand">
 							<span class="filter-checkbox_text">Discraft</span>
 						</label>
 
-						<label class="merke-checkbox_label checkbox-label">
+						<label class="brand__checkbox-label checkbox-label">
 							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="discmania" data-filter-by="brand">
 							<span class="filter-checkbox_text">Discmania</span>
 						</label>
 
-						<label class="merke-checkbox_label checkbox-label">
+						<label class="brand__checkbox-label checkbox-label">
 							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="kastaplast" data-filter-by="brand">
 							<span class="filter-checkbox_text">Kastaplast</span>
 						</label>
 
-						<label class="merke-checkbox_label checkbox-label">
+						<label class="brand__checkbox-label checkbox-label">
 							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="innova" data-filter-by="brand">
 							<span class="filter-checkbox_text">Innova</span>
 						</label>
 
-						<label class="merke-checkbox_label checkbox-label">
+						<label class="brand__checkbox-label checkbox-label">
 							<input class="filter-checkbox_input filter-button" hidden type="checkbox" data-filter-value="ev-7" data-filter-by="brand">
 							<span class="filter-checkbox_text">EV-7</span>
 						</label>
@@ -122,45 +122,45 @@
 				</aside>
 			
 
-				<div class="grid-discer pages ">
+				<div class="grid__discer pages ">
 					<button class="mobile-filter-button">Filter</button>
 				</div>
 
 			</div>
 
 			<div class="nybegynner-discer pages" data-page="nybegynner">
-				<div class="ny-discer-text">
-					<div class="ny-discer-title">Ny i Discgolf? </div>
-					<div class="ny-discer-description">
+				<div class="new-discer__text">
+					<div class="new-discer__title">Ny i Discgolf? </div>
+					<div class="new-discer__description">
 						<div>Å begynne med disc golf kan være forvirrende, mange discer i ulike former og farger overalt.
 							Vanskelig å vite hva man burde starte med.</div>
 						<div>Her er ett utvalg med enkle discer som kan gjøre starten litt enklere! </div>
 					</div>
 				</div>
 
-				<div class="grid-nydiscer">
+				<div class="grid__new-discer">
 					
 				</div>
 			</div>
 
 			<div class="kontakt pages " data-page="kontakt">
-				<div class="kontakt-text">
-					<div class="kontakt-title">Lurer du på noe angående oss eller discgolf? </div>
-					<div class="kontakt-description">
+				<div class="contact-text">
+					<div class="contact-title">Lurer du på noe angående oss eller discgolf? </div>
+					<div class="contact-description">
 						<div>Nøl ikke med å ta kontakt!</div>
 						<div>Fyll ut skjemaet under så tar vi kontakt så fort vi har tid!</div>
 					</div>
 				</div>
 
-				<form class="kontakt-skjema" onsubmit="return false" novalidate>
-					<div class="grid-skjema">
-							<input class="kontakt-skjema_felt kontakt-skjema_navn" type="text" required placeholder="Ola Nordmann">
-							<input class="kontakt-skjema_felt kontakt-skjema_telefon" type="number" required placeholder="Telefonnummer" maxlength="8">
-							<input class="kontakt-skjema_felt kontakt-skjema_mail" type="email" required placeholder="ola.nordmann@hotmail.no">
-							<textarea class="kontakt-skjema_felt kontakt-skjema_kommentar" required placeholder="Kommentar..."></textarea>
+				<form class="contact-form" onsubmit="return false" novalidate>
+					<div class="grid-form">
+							<input class="contact-form_field contact-form_name" type="text" required placeholder="Ola Nordmann">
+							<input class="contact-form_field contact-form_phone" type="number" required placeholder="Telefonnummer" maxlength="8">
+							<input class="contact-form_field contact-form_mail" type="email" required placeholder="ola.nordmann@hotmail.no">
+							<textarea class="contact-form_field contact-form_comment" required placeholder="Kommentar..."></textarea>
 					</div>
 						
-					<button class="kontakt-skjema_submit">Send inn!</button>
+					<button class="contact-form_submit">Send inn!</button>
 				</form>
 			</div>
 			
