Redesigned home page

--- a/index.html
+++ b/index.html
@@ -43,11 +43,15 @@
 
 			<div class="front-page pages visible" data-page="home">
 				<div class="front-page-container">
-					<img class="front-page-image" src="/assets/landing-page_img/people-playing-disc-golf2.jpeg" alt="">
-					<div class="front-page-text">
-						<div class="front-page-title">Velkommen til DiscHow</div>
-						<div class="front-page-description">her kan du lære alt du trenger om diverse discer!</div>
+
+					<div class="front-page_content">
+						<div class="front-page_text">her kan du lære alt du trenger om diverse discer!</div>
 					</div>
+
+					<div class="front-page_image">
+						<img class="front-page-image" src="/assets/landing-page_img/basket-in-a-field.jpeg" alt="">
+					</div>
+					
 				</div>
 			</div>
 			
@@ -165,7 +169,7 @@
 			</div>
 
 			
-			<div class="footer-container">
+			<div class="footer-container visible">
 			
 				<div class="footer-content">
 					<span class="footer-content_text">
